Added data exploration notebook

--- a/Projects/titanic_data_analysis/notebooks/data_exploration.ipynb
+++ b/Projects/titanic_data_analysis/notebooks/data_exploration.ipynb
@@ -3,62 +3,46 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ab32301d",
+   "id": "f3aa3235",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import necessary libraries\n",
+    "# Import libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "8d7bcf4c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import seaborn as sns\n",
+    "\n",
     "# Display settings\n",
     "pd.set_option('display.max_columns', None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b1f0bfa0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Loading the training data\n",
-    "train_df = pd.read_csv('../data/train.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "8438aebd",
+   "execution_count": 3,
+   "id": "0e53e648",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset Shape: (891, 12)\n"
+      "Dataset shape: (891, 12)\n"
      ]
     }
    ],
    "source": [
-    "# Quick check on number of rows and columns\n",
-    "print(f\"Dataset Shape: {train_df.shape}\")"
+    "# Load the training data\n",
+    "train_df = pd.read_csv('../data/train.csv')\n",
+    "\n",
+    "# Quick check\n",
+    "print(f\"Dataset shape: {train_df.shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "383e76d0",
+   "execution_count": 4,
+   "id": "4093bb5e",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +183,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,45 +195,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "52349d6b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 891 entries, 0 to 890\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   PassengerId  891 non-null    int64  \n",
-      " 1   Survived     891 non-null    int64  \n",
-      " 2   Pclass       891 non-null    int64  \n",
-      " 3   Name         891 non-null    object \n",
-      " 4   Sex          891 non-null    object \n",
-      " 5   Age          714 non-null    float64\n",
-      " 6   SibSp        891 non-null    int64  \n",
-      " 7   Parch        891 non-null    int64  \n",
-      " 8   Ticket       891 non-null    object \n",
-      " 9   Fare         891 non-null    float64\n",
-      " 10  Cabin        204 non-null    object \n",
-      " 11  Embarked     889 non-null    object \n",
-      "dtypes: float64(2), int64(5), object(5)\n",
-      "memory usage: 83.7+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Get detailed information of the dataset\n",
-    "train_df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "4961bf65",
+   "execution_count": 5,
+   "id": "ec33b767",
    "metadata": {},
    "outputs": [
     {
@@ -389,20 +336,20 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Statistical Summary of numerical columns\n",
+    "# Statistical summary of numerical columns\n",
     "train_df.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "08a8eeb7",
+   "execution_count": 6,
+   "id": "f5d3cad6",
    "metadata": {},
    "outputs": [
     {
@@ -418,22 +365,23 @@
     }
    ],
    "source": [
-    "# Count missing values\n",
+    "# Count missing values in each column\n",
     "missing_values = train_df.isnull().sum()\n",
-    "missing_percentage = round((train_df.isnull().sum()/len(train_df)) *100, 2)\n",
+    "missing_percentage = round((train_df.isnull().sum()/len(train_df))*100, 2)\n",
     "\n",
     "missing_df = pd.DataFrame({\n",
     "    'missing_count': missing_values,\n",
-    "    'percentage' : missing_percentage\n",
+    "    'percentage': missing_percentage\n",
     "})\n",
+    "\n",
     "print(\"Missing Values Analysis:\")\n",
     "print(missing_df[missing_df['missing_count'] > 0].sort_values('missing_count', ascending=False))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "70b3bc56",
+   "execution_count": 7,
+   "id": "26fe0802",
    "metadata": {},
    "outputs": [
     {
@@ -458,15 +406,15 @@
     }
    ],
    "source": [
-    "# Check Data Types\n",
-    "print('Data Types:')\n",
+    "# Check data types of each column\n",
+    "print(\"Data Types:\")\n",
     "print(train_df.dtypes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "72f886dc",
+   "execution_count": 8,
+   "id": "387d37b7",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +428,7 @@
     }
    ],
    "source": [
-    "# Survival Rate\n",
+    "# Overall Survival Rate\n",
     "print(\"Overall Survival Rate:\")\n",
     "print(f\"Survived: {train_df['Survived'].sum()} ({train_df['Survived'].mean()*100:.2f}%)\")\n",
     "print(f\"Died: {(train_df['Survived']==0).sum()} ({(1-train_df['Survived'].mean())*100:.2f}%)\")"
@@ -488,8 +436,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "4ab975ef",
+   "execution_count": 9,
+   "id": "6258fac8",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +461,7 @@
     }
    ],
    "source": [
-    "# Ticket Class Distribution\n",
+    "# Passenger Class Distribution\n",
     "print(\"Passenger Ticket Class Distribution:\")\n",
     "print(train_df['Pclass'].value_counts().sort_index())\n",
     "\n",
@@ -523,8 +471,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "fb31f724",
+   "execution_count": 10,
+   "id": "8c311839",
    "metadata": {},
    "outputs": [
     {
@@ -556,8 +504,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "e6382bf2",
+   "execution_count": 11,
+   "id": "98b1ab38",
    "metadata": {},
    "outputs": [
     {
@@ -584,14 +532,15 @@
     "# Embarked Port Analysis\n",
     "print(\"Embarkation Port Distribution:\")\n",
     "print(train_df['Embarked'].value_counts())\n",
+    "\n",
     "print(\"\\nSurvival by Embarkation Port:\")\n",
     "print(train_df.groupby('Embarked')['Survived'].agg(['count', 'sum', 'mean']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "d17ed7e3",
+   "execution_count": 12,
+   "id": "4990494b",
    "metadata": {},
    "outputs": [
     {
